--- a/src/pages/utility.astro
+++ b/src/pages/utility.astro
@@ -89,11 +89,11 @@ import { getCollection } from "astro:content";
   </form>
   <p id="result2"></p>
 
-  <script type="module" src="/src/typescript/qrcode.ts"></script>
+  <script type="module" src="/cv/src/typescript/qrcode.ts"></script>
 
-  <script type="module" src="src/typescript/genPass.ts"></script>
+  <script type="module" src="cv/src/typescript/genPass.ts"></script>
 
-  <script type="module" src="testaCroce.ts"></script>
+  <script type="module" src="/testaCroce.ts"></script>
 
   <script>
     // Funzione per convertire Base64 in un'immagine
