--- a/src/pages/utility.astro
+++ b/src/pages/utility.astro
@@ -89,9 +89,9 @@ import { getCollection } from "astro:content";
   </form>
   <p id="result2"></p>
 
-  <script type="module" src="/cv/src/typescript/qrcode.ts"></script>
+  <script type="module" src="qrcode.ts"></script>
 
-  <script type="module" src="cv/src/typescript/genPass.ts"></script>
+  <script type="module" src="/genPass.ts"></script>
 
   <script type="module" src="/testaCroce.ts"></script>
 
