--- a/src/pages/utility.astro
+++ b/src/pages/utility.astro
@@ -91,9 +91,9 @@ import { getCollection } from "astro:content";
 
   <script type="module" src="qrcode.ts"></script>
 
-  <script type="module" src="/genPass.ts"></script>
+  <script type="module" src="genPass.ts"></script>
 
-  <script type="module" src="/testaCroce.ts"></script>
+  <script type="module" src="testaCroce.ts"></script>
 
   <script>
     // Funzione per convertire Base64 in un'immagine
