--- a/src/components/QrCodeGenerator.astro
+++ b/src/components/QrCodeGenerator.astro
@@ -1,4 +1,7 @@
-import QRCode from "qrcode";
+
+
+<script>
+    import QRCode from "qrcode";
 document.addEventListener("DOMContentLoaded", function () {
     const generateButton = document.getElementById("generate");
     const qrCodeContainer = document.getElementById("qrcode-container");
@@ -23,3 +26,4 @@ document.addEventListener("DOMContentLoaded", function () {
         });
     }
 });
+</script>
