--- a/src/components/TestaCorce.astro
+++ b/src/components/TestaCorce.astro
@@ -1,4 +1,5 @@
-document.addEventListener("DOMContentLoaded", () => {
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
     const tossButton: HTMLButtonElement | null = document.getElementById(
       "toss-button"
     ) as HTMLButtonElement;
@@ -24,3 +25,4 @@ document.addEventListener("DOMContentLoaded", () => {
       historyList?.appendChild(historyItem);
     });
   });
+</script>
