--- a/src/components/GenPass.astro
+++ b/src/components/GenPass.astro
@@ -1,4 +1,5 @@
-function generatePassword(length: number): string {
+<script>
+    function generatePassword(length: number): string {
     const charset: string =
       "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&*()_+";
     let password: string = "";
@@ -52,3 +53,4 @@ function generatePassword(length: number): string {
       }
     });
   });
+</script>
