--- a/src/pages/utility.astro
+++ b/src/pages/utility.astro
@@ -2,6 +2,9 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
+import QRCodeGenerator from "../components/QrCodeGenerator.astro";
+import GenPass from "../components/GenPass.astro";
+import TestaCroce from "../components/TestaCorce.astro";
 ---
 
 <BaseLayout sideBarActiveItemID="utility">
@@ -17,7 +20,7 @@ import { getCollection } from "astro:content";
       />
       <button class="btn btn-outline btn-primary" id="generate"
         >Genera QR Code</button
-      >
+      ><QRCodeGenerator />
       <div id="qrcode-container"></div>
     </div>
   </div>
@@ -26,6 +29,7 @@ import { getCollection } from "astro:content";
     <div class="collapse-title text-xl font-medium">
       Generatore di Password Sicure
     </div>
+    <GenPass />
     <div class="collapse-content">
       <input
         class="input input-bordered input-primary w-full max-w-xs"
@@ -45,6 +49,7 @@ import { getCollection } from "astro:content";
   <div class="collapse collapse-arrow bg-base-200">
     <input type="radio" name="my-accordion-2" />
     <div class="collapse-title text-xl font-medium">Gioco Testa o Croce</div>
+    <TestaCroce />
     <div class="collapse-content">
       <button id="toss-button">Lancia la Moneta</button>
       <div id="result">Risultato:</div>
