--- a/src/components/QrCodeGenerator.astro
+++ b/src/components/QrCodeGenerator.astro
@@ -1,4 +1,13 @@
-
+<input
+        class="input input-bordered input-primary w-full max-w-xs"
+        type="text"
+        id="input-text"
+        placeholder="Inserisci il link o il testo"
+      />
+      <button class="btn btn-outline btn-primary" id="generate"
+        >Genera QR Code</button
+      >
+      <div id="qrcode-container"></div>
 
 <script>
     import QRCode from "qrcode";
