--- a/src/components/TestaCorce.astro
+++ b/src/components/TestaCorce.astro
@@ -1,3 +1,8 @@
+<button id="toss-button">Lancia la Moneta</button>
+      <div id="result">Risultato:</div>
+      <h2>Storia dei Lanci</h2>
+      <ul id="history-list"></ul>
+
 <script>
     document.addEventListener("DOMContentLoaded", () => {
     const tossButton: HTMLButtonElement | null = document.getElementById(
