new post ArciGuardia

--- a/src/components/QrCodeGenerator.astro
+++ b/src/components/QrCodeGenerator.astro
@@ -1,38 +1,34 @@
 <input
-        class="input input-bordered input-primary w-full max-w-xs"
-        type="text"
-        id="input-text"
-        placeholder="Inserisci il link o il testo"
-      />
-      <button class="btn btn-outline btn-primary" id="generate"
-        >Genera QR Code</button
-      >
-      <div id="qrcode-container"></div>
+  class="input input-bordered input-primary w-full max-w-xs"
+  type="text"
+  id="input-text"
+  placeholder="Inserisci il link o il testo"
+/>
+<button class="btn btn-outline btn-primary" id="generate">Genera QR Code</button
+>
+<div id="qrcode-container"></div>
 
 <script>
-    import QRCode from "qrcode";
-document.addEventListener("DOMContentLoaded", function () {
+  import QRCode from "qrcode";
+  document.addEventListener("DOMContentLoaded", function () {
     const generateButton = document.getElementById("generate");
     const qrCodeContainer = document.getElementById("qrcode-container");
     const inputField = document.getElementById(
-        "input-text"
+      "input-text"
     ) as HTMLInputElement; // Cast a HTMLInputElement
 
     if (generateButton && qrCodeContainer && inputField) {
-        generateButton.addEventListener("click", async function () {
-            const inputValue = inputField.value; // Ora `value` esiste su HTMLInputElement
-            if (inputValue) {
-                try {
-                    const qrCodeUrl = await QRCode.toDataURL(inputValue);
-                    qrCodeContainer.innerHTML = `<img src="${qrCodeUrl}" alt="QR Code">`;
-                } catch (error) {
-                    console.error(
-                        "Errore durante la generazione del QR Code:",
-                        error
-                    );
-                }
-            }
-        });
+      generateButton.addEventListener("click", async function () {
+        const inputValue = inputField.value; // Ora `value` esiste su HTMLInputElement
+        if (inputValue) {
+          try {
+            const qrCodeUrl = await QRCode.toDataURL(inputValue);
+            qrCodeContainer.innerHTML = `<img src="${qrCodeUrl}" alt="QR Code">`;
+          } catch (error) {
+            console.error("Errore durante la generazione del QR Code:", error);
+          }
+        }
+      });
     }
-});
+  });
 </script>
