--- a/src/components/DiffDate.astro
+++ b/src/components/DiffDate.astro
@@ -1,11 +1,11 @@
 <form id="date-form">
   <label for="date1">Data 1:</label>
-  <input type="date" id="date1" required />
+  <input type="date" class="input input-bordered input-primary w-full max-w-xs"  id="date1" required />
   <br />
   <label for="date2">Data 2:</label>
-  <input type="date" id="date2" required />
+  <input type="date"class="input input-bordered input-secondary w-full max-w-xs"  id="date2" required />
   <br />
-  <button type="submit">Calcola</button>
+  <button class="btn btn-outline btn-primary" type="submit">Calcola</button>
 </form>
 <p id="result2"></p>
 
