--- a/src/components/TestaCorce.astro
+++ b/src/components/TestaCorce.astro
@@ -1,4 +1,4 @@
-<button id="toss-button">Lancia la Moneta</button>
+<button class="btn btn-outline btn-primary" id="toss-button">Lancia la Moneta</button>
 <div id="result">Risultato:</div>
 <h2>Storia dei Lanci</h2>
 <ul id="history-list"></ul>
