--- a/src/components/LastRaceResults.astro
+++ b/src/components/LastRaceResults.astro
@@ -8,14 +8,26 @@ const results = await getLastRaceResults();
 
 <div class="card bg-base-100 shadow-xl p-4 my-4">
     <h2 class="card-title">Risultati Ultima Gara</h2>
-    <ul>
-        {results.map((result) => (
-            <li class={`team-${result.Constructor.name.toLowerCase().replace(/\s/g, '')}`}> 
-                {result.position}. {result.Driver.givenName} {result.Driver.familyName} - {result.Constructor.name}
-            </li>
-        ))}
-    </ul>
+    <table class="table w-full">
+        <thead>
+            <tr>
+                <th>Posizione</th>
+                <th>Nome Pilota</th>
+                <th>Constructor</th>
+            </tr>
+        </thead>
+        <tbody>
+            {results.map((result) => (
+                <tr class={`team-${result.Constructor.name.toLowerCase().replace(/\s/g, '')}`}>
+                    <td>{result.position}</td>
+                    <td>{result.Driver.givenName} {result.Driver.familyName}</td>
+                    <td>{result.Constructor.name}</td>
+                </tr>
+            ))}
+        </tbody>
+    </table>
 </div>
+
 
 <style>
     /* styles.css */
