--- a/src/pages/f1.astro
+++ b/src/pages/f1.astro
@@ -3,20 +3,25 @@ import NextRace from '../components/NextRace.astro';
 import LastRaceResults from '../components/LastRaceResults.astro';
 import DriverStandings from '../components/DriverStandings.astro';
 import ConstructorStandings from '../components/ConstructorStandings.astro'
+import Races from '../components/Races.astro'
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<!DOCTYPE html>
-<html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informazioni sulla Formula 1</title>
-</head>
-<body class="p-10">
+
+
+
+<BaseLayout title="F1" sideBarActiveItemID="f1">
+    
     <h1 class="text-3xl font-bold mb-4">Informazioni sulla Formula 1</h1>
     <NextRace />
     <LastRaceResults />
     <DriverStandings />
     <ConstructorStandings />
-</body>
-</html>
+    <Races season="2024" />
+  
+    
+  
+    
+ 
+  
+  </BaseLayout>
