--- a/src/pages/utility.astro
+++ b/src/pages/utility.astro
@@ -13,7 +13,20 @@ import DriverStandings from '../components/DriverStandings.astro';
 import ConstructorStandings from '../components/ConstructorStandings.astro'
 
 
+import StatsComponent from '../components/DriverInfo.astro'
+import { getDriverInfo, getDriverStats } from '../services/f1Service';
 
+// Array di ID dei piloti
+const driverIds = ['max_verstappen', 'hamilton', 'leclerc', 'norris', 'sainz', 'piastri'];
+
+const driversData = await Promise.all(driverIds.map(async (driverId) => {
+    const driverInfo = await getDriverInfo(driverId);
+    const driverStats = await getDriverStats(driverId); // Usa la versione per la stagione 2024
+    return {
+        driverData: driverInfo,
+        driverStats: driverStats
+    };
+}));
 
 ---
 
@@ -72,6 +85,24 @@ import ConstructorStandings from '../components/ConstructorStandings.astro'
       <!--inizio component-->
       <NextRace />
       <LastRaceResults />
+      <!--fine component -->
+    </div>
+  </div>
+  <div class="collapse collapse-arrow bg-base-200">
+    <input type="radio" name="my-accordion-2" />
+    <div class="collapse-title text-xl font-medium">
+      Statistiche piloti F1
+    </div>
+    <div class="collapse-content">
+      <!--inizio component-->
+      <div class="row">
+        {driversData.map(({ driverData, driverStats }) => (
+          <div class="w-full mb-4">
+            <StatsComponent driverData={driverData} driverStats={driverStats} />
+          </div>
+        ))}
+      </div>
+      
       <!--fine component -->
     </div>
   </div>
