--- a/src/components/DriverInfo.astro
+++ b/src/components/DriverInfo.astro
@@ -2,36 +2,37 @@
 // Importa le funzioni e chiama le API nel file che importa questo componente Astro.
 const { driverData, driverStats } = Astro.props;
 ---
+<!-- Righe del nome del pilota -->
 
-<div class="stats shadow">
+  <div class="stats shadow p-4 text-center">
+    
+    <!-- Righe delle statistiche -->
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+        <div class="stat mb-3">
+            <div class="stat-title text-sm md:text-base">Nome Pilota</div>
+            <div class="stat-value text-primary text-lg md:text-2xl">{driverData.givenName} {driverData.familyName}</div>
+            <div class="stat-desc text-xs md:text-sm">ID: {driverData.driverId}</div>
+          </div>
+      <div class="stat mb-3 flex flex-col items-center">
+        <div class="stat-title text-sm md:text-base">Numero di 1° Posti</div>
+        <div class="stat-value text-secondary text-lg md:text-2xl">{driverStats.wins}</div>
+        <div class="stat-desc text-xs md:text-sm">Vittorie totali in carriera</div>
+      </div>
   
-  <div class="stat">
-    <div class="stat-figure text-primary">
-      
+      <div class="stat mb-3 flex flex-col items-center">
+        <div class="stat-title text-sm md:text-base">Numero di Podi</div>
+        <div class="stat-value text-lg md:text-2xl">{driverStats.podiums}</div>
+        <div class="stat-desc text-xs md:text-sm">Podi totali in carriera</div>
+      </div>
+  
+      <div class="stat mb-3 flex flex-col items-center">
+        <div class="stat-title text-sm md:text-base">Pole Position</div>
+        <div class="stat-value text-lg md:text-2xl">{driverStats.poles}</div>
+        <div class="stat-desc text-xs md:text-sm">Pole position totali</div>
+      </div>
     </div>
-    <div class="stat-title">Nome Pilota</div>
-    <div class="stat-value text-primary"> {driverData.familyName}</div>
-    <div class="stat-desc">ID: {driverData.driverId}</div>
+  
   </div>
   
-  <div class="stat">
-    <div class="stat-title">Numero di 1° Posti</div>
-    <div class="stat-value text-secondary">{driverStats.wins}</div>
-    <div class="stat-desc">Vittorie totali in carriera</div>
-  </div>
-
-  <div class="stat">
-    <div class="stat-title">Numero di Podi</div>
-    <div class="stat-value">{driverStats.podiums}</div>
-    <div class="stat-desc">Podi totali in carriera</div>
-  </div>
-
-  <div class="stat">
-    <div class="stat-title">Pole Position</div>
-    <div class="stat-value">{driverStats.poles}</div>
-    <div class="stat-desc">Pole position totali</div>
-  </div>
-
- 
   
-</div>
+  
