--- a/src/pages/utility.astro
+++ b/src/pages/utility.astro
@@ -11,6 +11,7 @@ import NextRace from '../components/NextRace.astro';
 import LastRaceResults from '../components/LastRaceResults.astro';
 import DriverStandings from '../components/DriverStandings.astro';
 import ConstructorStandings from '../components/ConstructorStandings.astro'
+import StatsComponent2 from '../components/TeamSectionF1.astro'
 
 
 import StatsComponent from '../components/DriverInfo.astro'
@@ -95,12 +96,12 @@ const driversData = await Promise.all(driverIds.map(async (driverId) => {
     </div>
     <div class="collapse-content">
         <!-- Inizio componente -->
-        <div class="flex flex-col items-center">
-            {driversData.map(({ driverData, driverStats }) => (
-                <div class="w-full mb-4">
-                    <StatsComponent driverData={driverData} driverStats={driverStats} />
-                </div>
-            ))}
+        <div class="row bg-base-100">
+          {driversData.map(({ driverData, driverStats }) => (
+            <div class="w-full mb-4">
+              <StatsComponent2 driverData={driverData} driverStats={driverStats} />
+            </div>
+          ))}
         </div>
         <!-- Fine componente -->
     </div>
