--- a/src/pages/utility.astro
+++ b/src/pages/utility.astro
@@ -80,7 +80,10 @@ const driversData = await Promise.all(driverIds.map(async (driverId) => {
   <div class="collapse collapse-arrow bg-base-200">
     <input type="radio" name="my-accordion-2" />
     <div class="collapse-title text-xl font-medium">
-      F1
+      <div style="display: flex; align-items: center;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/F1.svg" alt="Logo F1" style="width: 100px; height: auto; margin-right: 10px;">
+        <h1 style="margin: 0;">Statistiche Formula 1 </h1>
+      </div>
     </div>
     <div class="collapse-content">
       <!--inizio component-->
@@ -92,7 +95,10 @@ const driversData = await Promise.all(driverIds.map(async (driverId) => {
   <div class="collapse collapse-arrow bg-base-200">
     <input type="radio" name="my-accordion-2" />
     <div class="collapse-title text-xl font-medium">
-        Statistiche piloti F1
+      <div style="display: flex; align-items: center;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/F1.svg" alt="Logo F1" style="width: 100px; height: auto; margin-right: 10px;">
+        <h1 style="margin: 0;">Statistiche Piloti Formula 1 </h1>
+      </div>
     </div>
     <div class="collapse-content">
         <!-- Inizio componente -->
