--- a/src/pages/f1.astro
+++ b/src/pages/f1.astro
@@ -7,8 +7,9 @@ import Races from '../components/Races.astro'
 import BaseLayout from "../layouts/BaseLayout.astro";
 
 import StatsComponent from '../components/DriverInfo.astro'
+import ConstructorInfo from '../components/ConstructorInfo.astro';
 import StatsComponent2 from '../components/TeamSectionF1.astro'
-import { getDriverInfo, getDriverStats } from '../services/f1Service';
+import { getDriverInfo, getDriverStats, getConstructorInfo, getConstructorStats } from '../services/f1Service';
 
 // Array di ID dei piloti
 const driverIds = ['max_verstappen', 'hamilton', 'leclerc', 'norris', 'sainz', 'piastri'];
@@ -21,14 +22,29 @@ const driversData = await Promise.all(driverIds.map(async (driverId) => {
         driverStats: driverStats
     };
 }));
+
+// Array di ID dei costruttori
+const constructorIds = ['mercedes', 'red_bull', 'ferrari', 'mclaren', 'alpine'];
+
+const constructorsData = await Promise.all(constructorIds.map(async (constructorId) => {
+    const constructorInfo = await getConstructorInfo(constructorId); // Funzione per ottenere informazioni sul costruttore
+    const constructorStats = await getConstructorStats(constructorId); // Usa la versione per la stagione 2024
+    return {
+        constructorData: constructorInfo,
+        constructorStats: constructorStats
+    };
+}));
+
 ---
 
 
 
 
 <BaseLayout title="F1" sideBarActiveItemID="f1">
-    
-    <h1 class="text-3xl font-bold mb-4">Informazioni sulla Formula 1</h1>
+  <div style="display: flex; align-items: center;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/F1.svg" alt="Logo F1" style="width: 100px; height: auto; margin-right: 10px;">
+    <h1 style="margin: 0;">Statistiche Formula 1 </h1>
+  </div>
     <NextRace />
     <LastRaceResults />
     <DriverStandings />
@@ -42,6 +58,15 @@ const driversData = await Promise.all(driverIds.map(async (driverId) => {
           </div>
         ))}
       </div>
+
+      <div class="row">
+        {constructorsData.map(({ constructorData, constructorStats }) => (
+            <div class="w-full mb-4">
+                <ConstructorInfo constructorData={constructorData} constructorStats={constructorStats} />
+            </div>
+        ))}
+    </div>
+    
 
      
       
