--- a/src/components/ConstructorInfo.astro
+++ b/src/components/ConstructorInfo.astro
@@ -4,7 +4,7 @@ const { constructorData, constructorStats } = Astro.props;
 const constructorLogos = {
     ferrari: 'https://upload.wikimedia.org/wikipedia/it/0/04/Logo_della_Ferrari_S.p.A..svg',
     red_bull: 'https://upload.wikimedia.org/wikipedia/commons/9/91/Logo_of_Red_bull.svg',
-    mercedes: 'https://upload.wikimedia.org/wikipedia/commons/2/2c/Mercedes-Benz_free_logo.svg',
+    mercedes: 'https://upload.wikimedia.org/wikipedia/commons/f/fb/Mercedes_AMG_Petronas_F1_Logo.svg',
     mclaren: 'https://upload.wikimedia.org/wikipedia/en/4/45/McLaren_logo.svg',
     alpine: 'https://upload.wikimedia.org/wikipedia/commons/7/7e/Alpine_F1_Team_Logo.svg',
     // aggiungi altri costruttori qui
@@ -20,7 +20,7 @@ const constructorLogos = {
             <img 
                 src={constructorLogos[constructorData.constructorId]} 
                 alt={`${constructorData.name} logo`} 
-                style={{ width: constructorData.constructorId === 'mclaren' || constructorData.constructorId === 'red_bull' ? '90px' : '70px', height: '90px' }} 
+                style={{ width: constructorData.constructorId === 'mercedes' || constructorData.constructorId === 'mclaren' || constructorData.constructorId === 'red_bull' ? '90px' : '70px', height: '90px' }} 
             />
         </div>
         
